! Sampler: Fixes in pitch slide command (it became broken when adding samplerate support)
! Wave editor: Fixes from 1.11 betas ( Crop command broken, copy&paste to new slot, fadein/out of parts of the sample and several other selection size discrepancies)
! Gear rack: exchanging instruments to an unused position crashed the application.
! Sampulse : Fixed play backwards command 0E9F


v1.11.2 (beta) (2014-02-16)
--------
! LUA Host fixes related to sampling rate awareness, crash on parameter list if it has zero parameters and name on machine creation.
! Wave editor crash on cut/copy and crash on deleting sample from samples bank.
! Fix on opening the load/save presets (.fxb/.fxp) on Windows XP.
! Fix on changing the "font sel" colour from visual config.
! Fix on knob tweaking (the cursor was supposed to be hidden while tweaking)
! VST tweaking from its UI wasn't working in beta1
! native plugin tweaks with negative range wasn't recording the correct values.
! Fixed crash when doing Exchange machines with effects with input wires.
! Fixed rare bug with VSTs (if the dll extension was uppercase, it didn't reload from a song. CM-505.DLL is an example).
! Fixed crash on sequence clear or sort if the song had used more than 128 patterns. (Error in the undo/redo code).
! Fixed new or clone pattern not giving a clean pattern when all positions have previously been used, even if not present in the sequence.
! Fixed crash on showing parameter list with machines with zero parameters. Now the menu option is disabled.
! Workaround for one audio engine deadlock
! Sampulse: Fix filtering. volume is applied after the filter. (fixes 303.it, but broke my 64mania.s3m.psy, which prompted the next fix)
! Sampulse: volume ramping reimplemented. Also, looped samples improvement  (would select incorrect one when position is after loopstart and new work call enters)
! Sampulse UI: Mixer view, playback mode now takes envelopes into account, other fixes in surround and mute checkboxes.
